--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,4 +1,4 @@
-# docker-compose.yml (FINAL - Corrected Paths)
+# docker-compose.yml (FINAL - Definitive Network Fix)
 services:
   backend:
     build: ./backend
@@ -8,11 +8,8 @@ services:
     volumes:
       - ./backend:/app
     env_file:
-      # --- THIS IS THE FIX ---
-      # The path is now correct for our new project structure
       - ./backend/.env
-    dns:
-      - 8.8.8.8
+    # The custom network with the bridge driver is the key fix
     networks:
       - bharath_ai_net
     depends_on:
@@ -24,8 +21,6 @@ services:
     container_name: bharath-ai-db
     restart: always
     env_file:
-      # --- THIS IS THE FIX ---
-      # The path is now correct for our new project structure
       - ./backend/.env
     ports:
       - "5432:5432"
@@ -44,4 +39,4 @@ volumes:
 
 networks:
   bharath_ai_net:
-    driver: bridge
+    driver: bridge # This explicitly tells Docker to use the more stable network driver
